# claude-code-monitor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  constitution.md
docs/bmad/: README.md
docs/bmad/01-analysis/: brainstorming.md  market-research.md  product-brief.md
docs/bmad/02-planning/: PRD.md  addendum.md  decision-log.md  ux-design.md
docs/bmad/03-solutioning/: architecture.md  data-model.md  implementation-readiness.md  project-context.md  quickstart.md  research-notes.md  tasks.md
docs/design/ui/: README.md  animations.md  component-css.md  empty-state.md  list-item.md  menu.md  popup-window.md  tray-icon.md
docs/design/uml/: 00-index.md  01-use-case.md  02-activity-end-to-end.md  03-component.md  04-package.md  05-class.md  06-sequence-startup.md  07-sequence-refresh.md  (+3 more)
docs/guides/: CONTRIBUTING.md  README.md  dogfood-retrospective-template.md  install.md
docs/product/: scenarios.md  success-metrics.md  user-stories.md
docs/roadmap/: README.md  dogfood-retro-20260601.md  launch-plan.md  v0.1.md  v0.2.md
docs/spec/: README.md  ipc-contract.md  jsonl-schema.md  logging.md
src/: main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/examples/: probe_e2e.rs  probe_pairing.rs
src-tauri/src/: lib.rs  logger.rs  main.rs  session.rs
src-tauri/tests/: jsonl_locator.rs  jsonl_tail.rs  list_sessions.rs  process_enum.rs
(+17 files in other folders)
