[package]
name = "claude-code-monitor"
version = "0.1.0"
description = "Menubar app that shows which Claude Code sessions are waiting for you."
authors = ["Yiwen Cai"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "claude_code_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
dirs = "5"

[dev-dependencies]
tempfile = "3"
